fix that the account drawer as "hidden" of screen overflowing creating a scrollbar in my browser(firefox based){didn't check chrome}

--- a/src/main/resources/static/app.css
+++ b/src/main/resources/static/app.css
@@ -9,6 +9,9 @@ dwc-app-layout {
   --dwc-app-layout-header-height: 60px;
   --dwc-app-layout-drawer-width: 20em;
 }
+dwc-app-layout::part(content) {
+  overflow: hidden;
+}
 .chapter-fold-btn{
   border: 0px none transparent;
   outline: 0px none transparent;
